--- a/apache-mod_transform.conf
+++ b/apache-mod_transform.conf
@@ -1,3 +1,3 @@
 # $Id$
-LoadModule transform_module modules/mod_transform.so
+LoadModule transform_module modules/libmod_transform.so
 # vim: filetype=apache ts=4 sw=4 et
